# life-observability-platform

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish-images.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260315_0001_initial.py  20260315_0002_metrics_events.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  dashboard.py  events.py  habits.py  health.py  integrations_github.py  journal.py  metrics.py  projects.py  settings.py  tasks.py  weekly_insights.py  weekly_summary.py
backend/app/core/: config.py  database.py  security.py
backend/app/integrations/: __init__.py  base.py
backend/app/integrations/github/: __init__.py  client.py  provider.py
backend/app/models/: __init__.py  enums.py  habit.py  journal.py  metric.py  mixins.py  project.py  task.py  user.py
backend/app/schemas/: auth.py  dashboard.py  event.py  habit.py  integration_github.py  journal.py  metrics.py  project.py  settings.py  task.py  weekly_insights.py  weekly_summary.py
backend/app/services/: analytics.py  dashboard.py  events.py  seed.py  weekly_insights.py  weekly_summary.py
backend/scripts/: entrypoint.sh  seed.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_github_integration.py  test_health.py  test_metrics.py  test_weekly_insights.py
deploy/k8s/: DEPLOY.md  backend.yaml  frontend.yaml  (+5 more)
frontend/: Dockerfile  package-lock.json  package.json
(+43 files in other folders)
